opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/abstract_algebra"
bug-reports: "https://github.com/janestreet/abstract_algebra/issues"
dev-repo: "git+https://github.com/janestreet/abstract_algebra.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/abstract_algebra/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "base"
  "ppx_jane"
  "dune"     {>= "3.17.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "A small library describing abstract algebra concepts"
description: "
A library describing abstract algebra concepts. Currently, it includes
Commutative_group and Vector_space.
"
